hard-gists/2692786/run.log
=== Docker Run Log for 2692786 ===
Started at: Mi 29. Okt 13:11:41 CET 2025

[2025-10-29 13:11:41] START: Running container for 2692786
[2025-10-29 13:11:42] SUCCESS: Container ecf51933c1f2ac169cfee0cb1778e7e9e780f72f410510df210af536f8eb681a started for 2692786
=== Container logs for 2692786 ===
  File "/snippet.py", line 57
    print counter
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2692786 ===
[2025-10-29 13:11:44] INFO: Container ecf51933c1f2ac169cfee0cb1778e7e9e780f72f410510df210af536f8eb681a has stopped
